--- a/pom.xml
+++ b/pom.xml
@@ -410,12 +410,6 @@ POSSIBILITY OF SUCH DAMAGE.
 
     <!-- Tests -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.10</version>
@@ -447,7 +441,7 @@ POSSIBILITY OF SUCH DAMAGE.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- PDS4 schema version -->
     <model-version>1J00</model-version>
-    <pds3-product-tools.version>4.0.1</pds3-product-tools.version>
+    <pds3-product-tools.version>4.2.0-SNAPSHOT</pds3-product-tools.version>
     <maven.antrun.version>3.1.0</maven.antrun.version>
   </properties>
   
